src/common-editor.scss
/* ... */
/* Block icons white when block is selected in list view. */
.block-editor-list-view-leaf.is-selected .block-editor-list-view-block-contents svg.uagb-editor-icons {

	path,
	rect,
	circle {
		stroke: #fff;
	}
}

/* Block icons white when toggle is set to select from tools. */
.block-editor-block-list__block-selection-button .block-editor-block-icon.has-colors svg.uagb-editor-icons {

	path,
	rect,
	circle {
		stroke: #fff;
	}
}

/* Block icons turn to secondary color when they are a parent block. */
.block-editor-block-parent-selector .block-editor-block-icon svg.uagb-editor-icons {

	path,
	rect,
	circle {
		stroke: $spectra-color-heading;
	}
}

/* Block Editor Block Icons Color*/
.block-editor-block-icon.has-colors svg.uagb-editor-icons {
	stroke: $spectra-color-secondary;

	path,
	rect,
	circle {
		stroke: $spectra-color-secondary;
	}

}

/* Breadcrumbs css */
.block-editor .interface-interface-skeleton__footer {
	padding: 5px;
	border-top: 1px solid #e9e9e9;

	.block-editor-block-breadcrumb {

		li {
			color: $spectra-color-secondary;
			font-weight: 600;
			font-size: 14px;

			button {
				color: $spectra-color-secondary;
				font-weight: 600;
			}

			svg {
				width: 25px;
				height: 25px;
			}

			.block-editor-block-breadcrumb__button::before {
				box-shadow: none;
			}

			.block-editor-block-breadcrumb__button:active:not(:disabled) {
				background: transparent;
			}
		}
	}
}

/* Gradient Picker CSS */
.uagb-gradient-picker {

	// This helps to fix alignment of gradient control input fields.
	.components-flex.components-custom-gradient-picker__ui-line {
		align-items: baseline;
	}

	.components-angle-picker-control {
		margin-bottom: 0;
	}

	label {
		text-transform: capitalize;
		font-weight: 400;
	}
}

/* Toggle Control */
.uagb-inspector-tab {

	.components-toggle-control .components-base-control__field {

		.components-flex { // WP6.1 compatibility.
			display: flex;
			flex-direction: row-reverse;
			justify-content: space-between;
			align-items: center;
		}
	}
}

/* Spectra Page Level Settings */
.is-pressed .spectra-page-settings-button path {
	fill: #fff;
}

.spectra-page-settings-button:hover path {
	fill: #007cba;
}

/* Spectra Sidebar Settings Notice */
.spectra-sidebar-settings-notice {
	margin: 0;

	&.is-error {
		background-color: #f5d9d9;
	}
}

/* Spectra Multiselect Control */
.spectra-multi-select__control {
	box-shadow: none !important;
	border-color: #e6e7e9 !important;
	border-radius: 3px !important;

	.spectra-multi-select__input input {
		box-shadow: none !important;
	}

	.spectra-multi-select__multi-value__label {
		font-size: 13px !important;
	}

	.spectra-multi-select__menu .spectra-multi-select__option {
		font-size: 13px !important;
	}
}

.editor-styles-wrapper .block-editor-block-list__block.wp-block[data-type*="uagb"] {

	::selection {
		color: #fff;
		background: #2f86dd;
	}
}

@import "styles/gutenberg-override";
@import "styles/control-responsive";
@import "styles/control-header";
@import "styles/control-popup";
@import "styles/control-media-picker";
@import "styles/spectra-change-indicators";
@import "styles/spectra-legacy";

